--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit==1.29.0
+streamlit==1.45.1
 boto3==1.38.32
 pandas==2.1.4
 python-dateutil==2.8.2
@@ -6,3 +6,4 @@ botocore==1.38.32
 PyPDF2==3.0.1
 python-multipart==0.0.6
 python-dotenv==1.1.0
+tiktoken==0.9.0
